--- a/eProject/KarnelTravel/KarnelTravel.csproj
+++ b/eProject/KarnelTravel/KarnelTravel.csproj
@@ -150,6 +150,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Management\Controllers\PageController.cs" />
     <Compile Include="Areas\Management\ManagementAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -960,6 +961,7 @@
     <Content Include="Content\User\fonts\revicons\revicons90c6.eot" />
     <Content Include="Content\User\fonts\revicons\revicons90c6.ttf" />
     <Content Include="Content\User\fonts\revicons\revicons90c6.woff" />
+    <Content Include="Areas\Management\Views\Page\Index.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -989,7 +991,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Management\Controllers\" />
     <Folder Include="Areas\Management\Models\" />
     <Folder Include="Content\Admin\assets\jquery-file-upload\server\php\files\thumbnail\" />
     <Folder Include="Models\" />
