--- a/eProject/KarnelTravel/KarnelTravel.csproj
+++ b/eProject/KarnelTravel/KarnelTravel.csproj
@@ -159,6 +159,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Management\Controllers\PageController.cs" />
+    <Compile Include="Areas\Management\Controllers\RoomsController.cs" />
     <Compile Include="Areas\Management\Controllers\VehiclesController.cs" />
     <Compile Include="Areas\Management\ManagementAreaRegistration.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -1099,9 +1100,15 @@
     </Content>
     <Content Include="Areas\Management\Views\Vehicles\Create.cshtml" />
     <Content Include="Areas\Management\Views\Vehicles\Delete.cshtml" />
-    <Content Include="Areas\Management\Views\Vehicles\Details.cshtml" />
     <Content Include="Areas\Management\Views\Vehicles\Edit.cshtml" />
     <Content Include="Areas\Management\Views\Vehicles\Index.cshtml" />
+    <Content Include="Areas\Management\Views\Vehicles\UploadVihicles.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\Create.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\Delete.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\Details.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\Edit.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\Index.cshtml" />
+    <Content Include="Areas\Management\Views\Rooms\UploadRooms.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
