--- a/eProject/KarnelTravel/KarnelTravel.csproj
+++ b/eProject/KarnelTravel/KarnelTravel.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Management\Controllers\HotelsController.cs" />
     <Compile Include="Areas\Management\Controllers\PageController.cs" />
     <Compile Include="Areas\Management\Controllers\RestaurantsController.cs" />
     <Compile Include="Areas\Management\Controllers\RoomsController.cs" />
@@ -1120,6 +1121,11 @@
     <Content Include="Areas\Management\Views\Restaurants\Delete.cshtml" />
     <Content Include="Areas\Management\Views\Restaurants\Create.cshtml" />
     <Content Include="Areas\Management\Views\Restaurants\UploadRestaurants.cshtml" />
+    <Content Include="Areas\Management\Views\Hotels\Index.cshtml" />
+    <Content Include="Areas\Management\Views\Hotels\Edit.cshtml" />
+    <Content Include="Areas\Management\Views\Hotels\Delete.cshtml" />
+    <Content Include="Areas\Management\Views\Hotels\Create.cshtml" />
+    <Content Include="Areas\Management\Views\Hotels\UploadHotels.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
