--- a/eProject/KarnelTravel/KarnelTravel.csproj
+++ b/eProject/KarnelTravel/KarnelTravel.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Areas\Management\Controllers\FeedbacksController.cs" />
     <Compile Include="Areas\Management\Controllers\FoodsController.cs" />
     <Compile Include="Areas\Management\Controllers\HotelsController.cs" />
     <Compile Include="Areas\Management\Controllers\PageController.cs" />
@@ -1132,6 +1133,10 @@
     <Content Include="Areas\Management\Views\Foods\Delete.cshtml" />
     <Content Include="Areas\Management\Views\Foods\Create.cshtml" />
     <Content Include="Areas\Management\Views\Foods\UploadFoods.cshtml" />
+    <Content Include="Areas\Management\Views\Feedbacks\Index.cshtml" />
+    <Content Include="Areas\Management\Views\Feedbacks\Edit.cshtml" />
+    <Content Include="Areas\Management\Views\Feedbacks\Delete.cshtml" />
+    <Content Include="Areas\Management\Views\Feedbacks\Create.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
